# routes/index.js
@@ -1,9 +1,9 @@
 const router = require('express').Router();
 
-router.use('/', require('./swagger'));
+router.use('/api-docs', require('./swagger.js'));
 
 router.get('/', (req, res) => { res.send("Hello World"); });
 
-router.use('/contacts', require('./contacts'));
+router.use('/contacts', require('./contacts.js'));
 
 module.exports = router;
