# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Contacts Api",
-    "description": "Contacts Api",
+    "description": "Conatcts Api",
     "version": "1.0.0"
   },
   "host": "https://cse-341-project1-n4qt.onrender.com",
@@ -17,6 +17,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api-docs/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
